Fixed handler for VS2013

--- a/Web.Config
+++ b/Web.Config
@@ -10,10 +10,12 @@
 <configuration>
 	<appSettings/>
 	<connectionStrings/>
+  <system.webServer>
+    <handlers>
+      <add verb="*" path="*.png" type="VeHttpHandler" name="VeHandler"/>
+    </handlers>
+  </system.webServer>
 	<system.web>
-		<httpHandlers>
-			<add verb="*" path="*.png" type="VeHttpHandler"/>
-		</httpHandlers>
 		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
